--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,9 +1,10 @@
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
+
+
 
 
 
@@ -78,7 +79,7 @@ h6,
   font-family: 'Lora', serif;
 }
 .bg-primary {
-  background-color: #ffffff !important;
+  background-color: #b8312f !important;
 }
 .bg-success {
   background-color: #41a85f !important;
@@ -93,8 +94,8 @@ h6,
   background-color: #f28281 !important;
 }
 .btn-primary {
-  background-color: #ffffff;
-  border-color: #ffffff;
+  background-color: #b8312f;
+  border-color: #b8312f;
   color: #ffffff;
 }
 .btn-primary:hover,
@@ -103,14 +104,14 @@ h6,
 .btn-primary:active,
 .btn-primary.active {
   color: #ffffff;
-  background-color: #d4d4d4;
-  border-color: #d4d4d4;
+  background-color: #7b211f;
+  border-color: #7b211f;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #d4d4d4 !important;
-  border-color: #d4d4d4 !important;
+  background-color: #7b211f !important;
+  border-color: #7b211f !important;
 }
 .btn-secondary {
   background-color: #bfcecb;
@@ -214,8 +215,8 @@ h6,
 }
 .btn-primary-outline {
   background: none;
-  border-color: #ffffff;
-  color: #ffffff;
+  border-color: #671b1a;
+  color: #671b1a;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
@@ -223,14 +224,14 @@ h6,
 .btn-primary-outline:active,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #ffffff;
-  border-color: #ffffff;
+  background-color: #b8312f;
+  border-color: #b8312f;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #ffffff !important;
-  border-color: #ffffff !important;
+  background-color: #b8312f !important;
+  border-color: #b8312f !important;
 }
 .btn-secondary-outline {
   background: none;
@@ -333,7 +334,7 @@ h6,
   border-color: #f28281 !important;
 }
 .text-primary {
-  color: #ffffff !important;
+  color: #b8312f !important;
 }
 .text-success {
   color: #41a85f !important;
@@ -360,36 +361,36 @@ h6,
   background-color: #f28281;
 }
 .btn-social {
-  border-color: #ffffff;
+  border-color: #b8312f;
 }
 .btn-social:hover {
-  background: #ffffff;
+  background: #b8312f;
 }
 .mbr-company .list-group-item.active .list-group-text {
-  color: #ffffff;
+  color: #b8312f;
 }
 .mbr-footer p a,
 .mbr-footer ul a {
-  color: #ffffff;
+  color: #b8312f;
 }
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #ffffff;
+  background: #b8312f;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #ffffff;
+  color: #b8312f;
 }
 .lead a,
 .lead a:hover {
-  color: #ffffff;
+  color: #b8312f;
 }
 .lead blockquote {
-  border-color: #ffffff;
+  border-color: #b8312f;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #e08886;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -409,87 +410,8 @@ h6,
 }
 .mbr-small-footer a,
 .mbr-gallery-filter li:hover {
-  color: #ffffff;
+  color: #b8312f;
 }
-.scrollToTop_wraper {
-  opacity: 0 !important;
-}
-#menu-0 .hide-buttons .nav-btn {
-  display: none !important;
-}
-#menu-0 .navbar-caption {
-  color: #ffffff;
-}
-#menu-0 .navbar-toggler {
-  color: #ffffff;
-}
-#menu-0 .link,
-#menu-0 .dropdown-item {
-  color: #ffffff;
-}
-#menu-0 .link {
-  font-size: 1rem;
-}
-#menu-0 .dropdown-item,
-#menu-0 .nav-dropdown-sm .link {
-  font-size: 1.083rem;
-}
-#menu-0 .link:hover,
-#menu-0 .dropdown-item:hover,
-#menu-0 .link:focus,
-#menu-0 .dropdown-item:focus {
-  color: #ffffff;
-}
-#menu-0 .link[aria-expanded="true"],
-#menu-0 .dropdown-menu {
-  background: #010101;
-}
-#menu-0 .nav-dropdown-sm .link:focus,
-#menu-0 .nav-dropdown-sm .link:hover,
-#menu-0 .nav-dropdown-sm .dropdown-item:focus,
-#menu-0 .nav-dropdown-sm .dropdown-item:hover {
-  background: #100d19!important;
-}
-#menu-0 .navbar,
-#menu-0 .nav-dropdown-sm,
-#menu-0 .nav-dropdown-sm .link[aria-expanded="true"],
-#menu-0 .nav-dropdown-sm .dropdown-menu {
-  background: #171223;
-}
-#menu-0 .bg-color.transparent .link {
-  color: #ffffff;
-  transition: none;
-}
-#menu-0 .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#menu-0 .bg-color.transparent.opened .link:hover,
-#menu-0 .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
-}
-#menu-0 .link[aria-expanded="true"],
-#menu-0 .dropdown-item[aria-expanded="true"] {
-  color: #ffffff!important;
-}
-#menu-0.mbr-navbar--stuck .mbr-navbar__section {
-  background: #2c2c2c;
-}
-#menu-0 .mbr-navbar__hamburger {
-  color: #ffffff;
-}
-#menu-0 .close-icon::before,
-#menu-0 .close-icon::after {
-  background-color: #ffffff;
-}
-#msg-box7-1 .mbr-section-title,
-#msg-box7-1 .lead p {
-  color: #fff;
-}
-
-
-
-
-
 #menu-h .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -514,7 +436,7 @@ h6,
 #menu-h .dropdown-item:hover,
 #menu-h .link:focus,
 #menu-h .dropdown-item:focus {
-  color: #ffffff;
+  color: #b8312f;
 }
 #menu-h .link[aria-expanded="true"],
 #menu-h .dropdown-menu {
@@ -541,11 +463,11 @@ h6,
 }
 #menu-h .bg-color.transparent.opened .link:hover,
 #menu-h .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #b8312f;
 }
 #menu-h .link[aria-expanded="true"],
 #menu-h .dropdown-item[aria-expanded="true"] {
-  color: #ffffff!important;
+  color: #b8312f!important;
 }
 #menu-h.mbr-navbar--stuck .mbr-navbar__section {
   background: #2c2c2c;
@@ -559,30 +481,15 @@ h6,
 }
 #header1-w .mbr-section-lead {
   font-family: 'Oswald', sans-serif;
+  color: #ffffff;
+  font-size: 30px;
 }
 #header1-w .mbr-section-title {
-  font-size: 60px;
+  font-size: 48px;
+  color: #ffffff;
 }
-#header3-m .mbr-section-title,
-#header3-m .mbr-section-subtitle {
-  text-align: center;
-}
-#header3-m H3 {
-  font-size: 24px;
-}
-#features7-n .card-subtitle {
-  color: #bcbcbc;
-}
-#features7-n .iconbox {
-  background-color: #181c4e;
-  border-color: #181c4e;
-}
-#features7-o .card-subtitle {
-  color: #bcbcbc;
-}
-#features7-o .iconbox {
-  background-color: #181c4e;
-  border-color: #181c4e;
+#header1-w .mbr-section-lead SPAN {
+  font-size: 46px;
 }
 #content8-p .mbr-section-title,
 #content8-p p {
@@ -593,32 +500,7 @@ h6,
   text-align: left;
   font-size: 25px;
   font-family: 'Oswald', sans-serif;
-}
-#header3-t .mbr-section-title,
-#header3-t .mbr-section-subtitle {
-  text-align: center;
-}
-#header3-t H3 {
-  font-size: 36px;
-}
-#features1-r .striped .mbr-cards-col:nth-child(2n+1) {
-  background-color: #ffffff;
-}
-#features1-r .mbr-cards-col:nth-child(odd) .card-subtitle B {
-  font-family: 'Oswald', sans-serif;
-  color: #000000;
-}
-#features1-r .mbr-cards-col:nth-child(even) .card-subtitle {
-  color: #000000;
-}
-#features1-r .mbr-cards-col:nth-child(even) .card-subtitle B {
-  font-family: 'Oswald', sans-serif;
-}
-#features1-r .mbr-cards-col:nth-child(odd) .card-subtitle {
-  color: #000000;
-}
-#features1-r .mbr-cards-col:nth-child(odd) .card-subtitle SPAN {
-  font-family: 'Roboto Condensed', sans-serif;
+  color: #0b031d;
 }
 #msg-box8-u .mbr-section-title,
 #msg-box8-u p {
@@ -626,6 +508,23 @@ h6,
 }
 #msg-box8-u .lead P {
   text-align: left;
+}
+#msg-box8-u .mbr-section-title {
+  font-size: 24px;
+}
+#features7-n .card-subtitle {
+  color: #bcbcbc;
+}
+#features7-n .iconbox {
+  background-color: #0b1049;
+  border-color: #0b1049;
+}
+#features7-o .card-subtitle {
+  color: #bcbcbc;
+}
+#features7-o .iconbox {
+  background-color: #0b1049;
+  border-color: #0b1049;
 }
 #menu-2 .hide-buttons .nav-btn {
   display: none !important;
@@ -651,7 +550,7 @@ h6,
 #menu-2 .dropdown-item:hover,
 #menu-2 .link:focus,
 #menu-2 .dropdown-item:focus {
-  color: #ffffff;
+  color: #b8312f;
 }
 #menu-2 .link[aria-expanded="true"],
 #menu-2 .dropdown-menu {
@@ -678,11 +577,11 @@ h6,
 }
 #menu-2 .bg-color.transparent.opened .link:hover,
 #menu-2 .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #b8312f;
 }
 #menu-2 .link[aria-expanded="true"],
 #menu-2 .dropdown-item[aria-expanded="true"] {
-  color: #ffffff!important;
+  color: #b8312f!important;
 }
 #menu-2.mbr-navbar--stuck .mbr-navbar__section {
   background: #2c2c2c;
@@ -724,7 +623,7 @@ h6,
 #menu-4 .dropdown-item:hover,
 #menu-4 .link:focus,
 #menu-4 .dropdown-item:focus {
-  color: #ffffff;
+  color: #b8312f;
 }
 #menu-4 .link[aria-expanded="true"],
 #menu-4 .dropdown-menu {
@@ -751,11 +650,11 @@ h6,
 }
 #menu-4 .bg-color.transparent.opened .link:hover,
 #menu-4 .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #b8312f;
 }
 #menu-4 .link[aria-expanded="true"],
 #menu-4 .dropdown-item[aria-expanded="true"] {
-  color: #ffffff!important;
+  color: #b8312f!important;
 }
 #menu-4.mbr-navbar--stuck .mbr-navbar__section {
   background: #2c2c2c;
@@ -769,6 +668,9 @@ h6,
 }
 #header1-7 .mbr-section-lead {
   font-family: 'Merriweather', serif;
+}
+#header1-7 .mbr-section-title {
+  font-size: 46px;
 }
 #msg-box8-10 .mbr-section-title,
 #msg-box8-10 p {
@@ -831,7 +733,7 @@ h6,
 #menu-12 .dropdown-item:hover,
 #menu-12 .link:focus,
 #menu-12 .dropdown-item:focus {
-  color: #ffffff;
+  color: #b8312f;
 }
 #menu-12 .link[aria-expanded="true"],
 #menu-12 .dropdown-menu {
@@ -858,11 +760,11 @@ h6,
 }
 #menu-12 .bg-color.transparent.opened .link:hover,
 #menu-12 .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #b8312f;
 }
 #menu-12 .link[aria-expanded="true"],
 #menu-12 .dropdown-item[aria-expanded="true"] {
-  color: #ffffff!important;
+  color: #b8312f!important;
 }
 #menu-12.mbr-navbar--stuck .mbr-navbar__section {
   background: #2c2c2c;
@@ -876,6 +778,13 @@ h6,
 }
 #header1-14 .mbr-section-lead {
   font-family: 'Merriweather', serif;
+  font-size: 36px;
+}
+#header1-14 .mbr-section-lead SPAN {
+  font-size: 48px;
+}
+#header1-14 .mbr-section-title {
+  font-size: 48px;
 }
 #msg-box8-16 .mbr-section-title,
 #msg-box8-16 p {
@@ -917,7 +826,7 @@ h6,
 #menu-1c .dropdown-item:hover,
 #menu-1c .link:focus,
 #menu-1c .dropdown-item:focus {
-  color: #ffffff;
+  color: #b8312f;
 }
 #menu-1c .link[aria-expanded="true"],
 #menu-1c .dropdown-menu {
@@ -944,11 +853,11 @@ h6,
 }
 #menu-1c .bg-color.transparent.opened .link:hover,
 #menu-1c .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #b8312f;
 }
 #menu-1c .link[aria-expanded="true"],
 #menu-1c .dropdown-item[aria-expanded="true"] {
-  color: #ffffff!important;
+  color: #b8312f!important;
 }
 #menu-1c.mbr-navbar--stuck .mbr-navbar__section {
   background: #2c2c2c;
@@ -962,6 +871,9 @@ h6,
 }
 #header1-1e .mbr-section-lead {
   font-family: 'Merriweather', serif;
+}
+#header1-1e .mbr-section-title {
+  font-size: 46px;
 }
 #msg-box8-1g .mbr-section-title,
 #msg-box8-1g p {
@@ -1024,7 +936,7 @@ h6,
 #menu-1m .dropdown-item:hover,
 #menu-1m .link:focus,
 #menu-1m .dropdown-item:focus {
-  color: #ffffff;
+  color: #b8312f;
 }
 #menu-1m .link[aria-expanded="true"],
 #menu-1m .dropdown-menu {
@@ -1051,11 +963,11 @@ h6,
 }
 #menu-1m .bg-color.transparent.opened .link:hover,
 #menu-1m .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #b8312f;
 }
 #menu-1m .link[aria-expanded="true"],
 #menu-1m .dropdown-item[aria-expanded="true"] {
-  color: #ffffff!important;
+  color: #b8312f!important;
 }
 #menu-1m.mbr-navbar--stuck .mbr-navbar__section {
   background: #2c2c2c;
@@ -1070,6 +982,9 @@ h6,
 #header1-1o .mbr-section-lead {
   font-family: 'Merriweather', serif;
 }
+#header1-1o .mbr-section-title {
+  font-size: 46px;
+}
 #msg-box8-1q .mbr-section-title,
 #msg-box8-1q p {
   color: #fff;
@@ -1083,4 +998,77 @@ h6,
   text-align: left;
   font-size: 25px;
   font-family: 'Oswald', sans-serif;
+}
+#menu-0 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-0 .navbar-caption {
+  color: #ffffff;
+}
+#menu-0 .navbar-toggler {
+  color: #ffffff;
+}
+#menu-0 .link,
+#menu-0 .dropdown-item {
+  color: #ffffff;
+}
+#menu-0 .link {
+  font-size: 1rem;
+}
+#menu-0 .dropdown-item,
+#menu-0 .nav-dropdown-sm .link {
+  font-size: 1.083rem;
+}
+#menu-0 .link:hover,
+#menu-0 .dropdown-item:hover,
+#menu-0 .link:focus,
+#menu-0 .dropdown-item:focus {
+  color: #b8312f;
+}
+#menu-0 .link[aria-expanded="true"],
+#menu-0 .dropdown-menu {
+  background: #010101;
+}
+#menu-0 .nav-dropdown-sm .link:focus,
+#menu-0 .nav-dropdown-sm .link:hover,
+#menu-0 .nav-dropdown-sm .dropdown-item:focus,
+#menu-0 .nav-dropdown-sm .dropdown-item:hover {
+  background: #100d19!important;
+}
+#menu-0 .navbar,
+#menu-0 .nav-dropdown-sm,
+#menu-0 .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-0 .nav-dropdown-sm .dropdown-menu {
+  background: #171223;
+}
+#menu-0 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-0 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-0 .bg-color.transparent.opened .link:hover,
+#menu-0 .bg-color.transparent.opened .link:focus {
+  color: #b8312f;
+}
+#menu-0 .link[aria-expanded="true"],
+#menu-0 .dropdown-item[aria-expanded="true"] {
+  color: #b8312f!important;
+}
+#menu-0.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-0 .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-0 .close-icon::before,
+#menu-0 .close-icon::after {
+  background-color: #ffffff;
+}
+#header1-1 .mbr-section-lead {
+  text-align: left;
+}
+#header1-1 .mbr-section-lead SPAN {
+  text-align: left;
 }
