--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -500,7 +500,7 @@ h6,
   text-align: left;
   font-size: 25px;
   font-family: 'Oswald', sans-serif;
-  color: #0b031d;
+  color: #000000;
 }
 #msg-box8-u .mbr-section-title,
 #msg-box8-u p {
