--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3,7 +3,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Slabo+27px);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:400,300,700);
 
 
@@ -565,7 +565,7 @@ h6,
 #header1-h .mbr-section-title SPAN {
   color: #ffffff;
   font-size: 84px;
-  font-family: 'Slabo 27px', serif;
+  font-family: 'Merriweather', serif;
 }
 #features1-l .striped .mbr-cards-col:nth-child(2n+1) {
   background-color: #000000;
