--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
@@ -5,6 +6,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:400,300,700);
+
 
 
 
@@ -422,6 +424,7 @@ h6,
 #ext_menu-4 .navbar-caption {
   color: #ffffff;
   font-size: 22px;
+  font-family: 'Oswald', sans-serif;
 }
 #ext_menu-4 .navbar-toggler {
   color: #ffffff;
@@ -496,12 +499,14 @@ h6,
 
 
 
+
 #ext_menu-d .hide-buttons .nav-btn {
   display: none !important;
 }
 #ext_menu-d .navbar-caption {
   color: #ffffff;
   font-size: 22px;
+  font-family: 'Oswald', sans-serif;
 }
 #ext_menu-d .navbar-toggler {
   color: #ffffff;
