--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -579,14 +579,21 @@ h6,
 #msg-box8-k p {
   color: #fff;
 }
-#header1-e .mbr-section-lead {
-  font-size: 46px;
-  font-family: 'Ubuntu', sans-serif;
-}
 #header3-o .mbr-section-title,
 #header3-o .mbr-section-subtitle {
   text-align: center;
 }
 #header3-o H3 {
   color: #000000;
+}
+#header1-e .mbr-section-lead {
+  font-size: 46px;
+  font-family: 'Ubuntu', sans-serif;
+}
+#header3-u .mbr-section-title,
+#header3-u .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-u H3 {
+  font-size: 25px;
 }
