--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -500,6 +500,7 @@ h6,
 
 
 
+
 #ext_menu-d .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -595,5 +596,6 @@ h6,
   text-align: center;
 }
 #header3-v H3 {
-  font-size: 20px;
+  font-size: 18px;
+  font-family: 'Lora', serif;
 }
